<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/imageView_greetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@null"
        android:src="@mipmap/login_sayhello"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <!--输入用户名和密码-->

        <EditText
            android:id="@+id/user_login_name_edit"
            android:layout_width="250dp"
            android:layout_height="28dp"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:gravity="center"
            android:textCursorDrawable="@null"
            android:textColorHint="@drawable/hint_selector"
            android:background="@drawable/bg_edittext"/>

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="250dp"
            android:layout_height="28dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="12dp"
            android:singleLine="true"
            android:textCursorDrawable="@null"
            android:gravity="center"
            android:inputType="textPassword"
            android:textColorHint="@drawable/hint_selector"
            android:background="@drawable/bg_edittext"/>

        <!--忘记密码-->

        <TextView
            android:id="@+id/textView_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="60dp"
            android:layout_marginTop="12dp"
            android:text="@string/forget_password"
            android:textColor="@color/colorBase"
            android:textSize="13sp"/>

    </LinearLayout>

    <!--第三方登录-->

    <LinearLayout
        android:id="@+id/third_login_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_button"
            android:layout_width="272dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_btn"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="17sp"/>
            <!--android:layout_center_horizontal="true"-->

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:text="@string/third_account_login"
            android:textColor="#ff666666"
            android:textSize="11sp"/>

        <RelativeLayout
            android:layout_width="186dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/login_weixin_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:contentDescription="@null"
                android:src="@mipmap/login_weixin_icon"/>
            <ImageView
                android:id="@+id/login_qq_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:contentDescription="@null"
                android:src="@mipmap/login_qq_icon"/>
            <ImageView
                android:id="@+id/login_weibo_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:contentDescription="@null"
                android:src="@mipmap/login_weibo_icon"/>

        </RelativeLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/switch_to_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/switch_to_register"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="26dp"
        android:textColor="#ff009fe8"
        android:textSize="15sp"/>
</LinearLayout>